--- a/SPMS/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -57,15 +57,15 @@
 	<script src="~/assets/js/dlabnav-init.js"></script>
 	<script src="~/assets/js/demo.js"></script>
 	 <script>
-    // Check that service workers are supported
-    if ('serviceWorker' in navigator) {
-        // Use the window load event to keep the page load performant
-        window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/js/sw.js');
-        });
-    }
+	// Check that service workers are supported
+	if ('serviceWorker' in navigator) {
+		// Use the window load event to keep the page load performant
+		window.addEventListener('load', () => {
+				navigator.serviceWorker.register('/js/sw.js');
+		});
+	}
 	</script>
-
+	@await Component.InvokeAsync("Notyf")
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
