--- a/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
@@ -25,7 +25,7 @@
 					<div class="card-header">
 						<h4 class="card-title">Project Topic</h4>
 						<span class="text-danger">@TempData["Error"]</span>
-						@if (prjt != null)
+						@if (prjt.Count() > 0)
 						{
 							<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add Chapter</button>
 							<div class="modal fade" id="basicModal">
