--- a/SPMS/Areas/Staff/Views/Project/CDetails.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/CDetails.cshtml
@@ -87,8 +87,8 @@
 									<p class="fs-18 font-w500">
 										@if (prjt != null)
 										{
-											<iframe seamless class="w-100" height="750" src="@prjt.FileUrl">
-												<sspan>Your browser does not support iframes.</sspan>
+											<iframe seamless class="w-100" height="750" src="/output.pdf">
+												<sspan>Unable to display file, Browser does not support iFrame.</sspan>
 											</iframe>
 										}
 									</p>
