--- a/SPMS/Areas/Staff/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Staff/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
 		});
 	}
 	</script>
-
+	@await Component.InvokeAsync("Notyf")
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
