--- a/SPMS/Areas/Graduate/Views/Project/Details.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Details.cshtml
@@ -86,7 +86,7 @@
 										<p class="fs-18 font-w500">
 											@if (prjt != null)
 											{
-												<iframe seamless class="w-100" height="750" src="@prjt.FileUrl">
+											<iframe seamless class="w-100" height="750" src="/output/@ViewBag.fileName">
 													<sspan>Unable to display file, Browser does not support iFrame.</sspan>
 												</iframe>
 											}
