--- a/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
 		});
 	}
 	</script>
-
+	@await Component.InvokeAsync("Notyf")
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
