--- a/SPMS/Areas/Staff/Views/Project/Details.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/Details.cshtml
@@ -89,8 +89,8 @@
 									<p class="fs-18 font-w500">
 										@if (prjt != null)
 										{
-											<iframe seamless class="w-100" height="750" src="@prjt.FileUrl">
-												<sspan>Your browser does not support iframes.</sspan>
+											<iframe seamless class="w-100" height="750" src="/output/@ViewBag.fileName">
+												<sspan>Unable to display file, Browser does not support iFrame.</sspan>
 											</iframe>
 										}
 									</p>
@@ -103,7 +103,6 @@
 											<div class="message1">
 												<textarea class="form-control" id="rTextarea" asp-for="@project.Remark" name="Remark" rows="4" placeholder="Type comment here..."></textarea>
 												<div class="msg-button">
-
 													<input type="submit" name="stat" value="Approved" class="btn btn-primary" /> &nbsp;&nbsp;
 													<input type="submit" name="stat" value="Rejected" class="btn btn-primary" />
 												</div>
