--- a/SPMS/Views/Account/Index.cshtml
+++ b/SPMS/Views/Account/Index.cshtml
@@ -5,7 +5,4 @@
 
 @ViewBag.document
 
-
-<iframe seamless class="w-100" height="650" src="@ViewBag.document">
-	<sspan>Your browser does not support iframes.</sspan>
-</iframe>
+<iframe src="https://www.federalpolyede.edu.ng/admin_student/login.php" width="100%" height="800" frameborder="0" scrolling="no"></iframe>
