--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -1,193 +1,195 @@
-﻿
-
-
-@if (User.IsInRole("Admin"))
+﻿@if (User.IsInRole("Admin"))
 {
-	<div class="dlabnav">
-		<div class="dlabnav-scroll">
-			<ul class="metismenu" id="menu">
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-home"></i>
-						<span class="nav-text">Dashboard</span>
-					</a>
-					<ul aria-expanded="false">
-						@*<li><a asp-controller="dashboard" asp-action="profile">Profile</a></li>*@
-					</ul>
+    <div class="dlabnav">
+        <div class="dlabnav-scroll">
+            <ul class="metismenu" id="menu">
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-home"></i>
+                        <span class="nav-text">Dashboard</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        @*<li><a asp-controller="dashboard" asp-action="profile">Profile</a></li>*@
+                    </ul>
 
-				</li>
+                </li>
 
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-tasks"></i>
-						<span class="nav-text">Manage</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="manage" asp-action="department">Department</a></li>
-						<li><a asp-controller="manage" asp-action="supervisor">Supervisors</a></li>
-						<li><a asp-controller="manage" asp-action="student">Students</a></li>
-						@*<li><a asp-controller="manage" asp-action="notification">notification</a></li>*@
-						<li>
-							<ul aria-expanded="false">
-							</ul>
-						</li>
-					</ul>
-				</li>
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-tasks"></i>
+                        <span class="nav-text">Manage</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="manage" asp-action="department">Department</a></li>
+                        <li><a asp-controller="manage" asp-action="supervisor">Supervisors</a></li>
+                        <li><a asp-controller="manage" asp-action="student">Students</a></li>
+                        @*<li><a asp-controller="manage" asp-action="notification">notification</a></li>*@
+                        <li>
+                            <ul aria-expanded="false">
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
 
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-info-circle"></i>
-						<span class="nav-text">Notification</span>
-					</a>
-					<ul aria-expanded="false">
-						@*<li><a asp-controller="project" asp-action="pstudent">Push Notification</a></li>*@
-						<li>
-							<ul aria-expanded="false">
-							</ul>
-						</li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-	</div>
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-info-circle"></i>
+                        <span class="nav-text">Notification</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        @*<li><a asp-controller="project" asp-action="pstudent">Push Notification</a></li>*@
+                        <li>
+                            <ul aria-expanded="false">
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
 
 }
 else if (User.IsInRole("Supervisor"))
 {
-	<div class="dlabnav">
-		<div class="dlabnav-scroll">
-			<ul class="metismenu" id="menu">
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-home"></i>
-						<span class="nav-text">Dashboard</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="dashboard" asp-action="account">Profile</a></li>
-						@*<li><a asp-controller="notification" asp-action="notification">Send Notification</a></li>*@
+    <div class="dlabnav">
+        <div class="dlabnav-scroll">
+            <ul class="metismenu" id="menu">
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-home"></i>
+                        <span class="nav-text">Dashboard</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="dashboard" asp-action="account">Profile</a></li>
+                        @*<li><a asp-controller="notification" asp-action="notification">Send Notification</a></li>*@
 
-					</ul>
+                    </ul>
 
-				</li>
-
-				
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-user-check"></i>
-						<span class="nav-text">Profile</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="dashboard" asp-action="account">Profile</a></li>
-						<li>
-							<ul aria-expanded="false">
-							</ul>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-tasks"></i>
-						<span class="nav-text">Project</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="project" asp-action="pstudent">Project Students</a></li>
-						<li><a asp-controller="project" asp-action="proposal">Proposals</a></li>
-						<li><a asp-controller="project" asp-action="milestone">Chapters</a></li>
-						<li><a asp-controller="project" asp-action="projectarchive">All Projects</a></li>
-						<li>
-							<ul aria-expanded="false">
-							</ul>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-info-circle"></i>
-						<span class="nav-text">Notification</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="Notification" asp-action="noti">Send Notification</a></li>
-						<li>
-							<ul aria-expanded="false">
-							</ul>
-						</li>
-					</ul>
-				</li>
-			</ul>
+                </li>
 
 
-		</div>
-	</div>
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-user-check"></i>
+                        <span class="nav-text">Profile</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="dashboard" asp-action="account">Profile</a></li>
+                        <li>
+                            <ul aria-expanded="false">
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-tasks"></i>
+                        <span class="nav-text">Project</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="project" asp-action="pstudent">Project Students</a></li>
+                        <li>
+                            <a asp-controller="project" asp-action="proposal">
+                                Proposals
+                                <span class="badge light text-white bg-blue rounded-circle">1</span>
+                            </a>
+                        </li>
+                        <li><a asp-controller="project" asp-action="milestone">Chapters</a></li>
+                        <li><a asp-controller="project" asp-action="projectarchive">All Projects</a></li>
+                        <li>
+                            <ul aria-expanded="false">
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-info-circle"></i>
+                        <span class="nav-text">Notification</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="Notification" asp-action="noti">Send Notification</a></li>
+                        <li>
+                            <ul aria-expanded="false">
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+
+        </div>
+    </div>
 }
 else if (User.IsInRole("Student"))
 {
-	<div class="dlabnav">
-		<div class="dlabnav-scroll">
-			<ul class="metismenu" id="menu">
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-home"></i>
-						<span class="nav-text">Dashboard</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="dashboard" asp-action="profile">Profile</a></li>
-						<li><a asp-controller="dashboard" asp-action="notify">Notifications</a></li>
-						<li><a asp-controller="chat" asp-action="index">Chat</a></li>
+    <div class="dlabnav">
+        <div class="dlabnav-scroll">
+            <ul class="metismenu" id="menu">
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-home"></i>
+                        <span class="nav-text">Dashboard</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="dashboard" asp-action="profile">Profile</a></li>
+                        <li><a asp-controller="dashboard" asp-action="notify">Notifications</a></li>
+                        <li><a asp-controller="chat" asp-action="index">Chat</a></li>
 
-					</ul>
+                    </ul>
 
-				</li>
+                </li>
 
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-tasks"></i>
-						<span class="nav-text">Project</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="project" asp-action="index">Proposal</a></li>
-						<li><a asp-controller="project" asp-action="milestone">Chapters</a></li>
-						<li><a asp-controller="project" asp-action="details">Project Details</a></li>
-						<li><a asp-controller="project" asp-action="completeproject">Submit Completed Project</a></li>
-						<li><a asp-controller="project" asp-action="projectarchive">See all Projects</a></li>
-						<li>
-							<ul aria-expanded="false">
-							</ul>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-user-check"></i>
-						<span class="nav-text">Profile</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="dashboard" asp-action="profile">Settings</a></li>
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-tasks"></i>
+                        <span class="nav-text">Project</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="project" asp-action="index">Proposal</a></li>
+                        <li><a asp-controller="project" asp-action="milestone">Chapters</a></li>
+                        <li><a asp-controller="project" asp-action="details">Project Details</a></li>
+                        <li><a asp-controller="project" asp-action="completeproject">Submit Completed Project</a></li>
+                        <li><a asp-controller="project" asp-action="projectarchive">See all Projects</a></li>
+                        <li>
+                            <ul aria-expanded="false">
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="fas fa-user-check"></i>
+                        <span class="nav-text">Profile</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="dashboard" asp-action="profile">Settings</a></li>
 
-						<li>
-							<ul aria-expanded="false">
-							</ul>
-						</li>
-					</ul>
-				</li>
+                        <li>
+                            <ul aria-expanded="false">
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
 
-				<li>
-					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="far fa-comments"></i>
-						<span class="nav-text">Chat</span>
-					</a>
-					<ul aria-expanded="false">
-						<li><a asp-controller="chat" asp-action="index"></a></li>
+                <li>
+                    <a class="has-arrow " href="javascript:void()" aria-expanded="false">
+                        <i class="far fa-comments"></i>
+                        <span class="nav-text">Chat</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a asp-controller="chat" asp-action="index"></a></li>
 
-						<li>
-							<ul aria-expanded="false">
-							</ul>
-						</li>
-					</ul>
-				</li>
-			</ul>
+                        <li>
+                            <ul aria-expanded="false">
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
 
-			
-		</div>
-	</div>
+
+        </div>
+    </div>
 
 }
