--- a/SPMS/Areas/Staff/Views/Project/MileStone.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/MileStone.cshtml
@@ -30,6 +30,7 @@
 				<div class="card">
 					<div class="card-body">
 						<div class="table-responsive">
+							<span class="text-danger">@TempData["Msg"]</span>
 							<table class="table table-sm mb-0">
 								<thead>
 									<tr>
