--- a/SPMS/Views/Shared/_DepartmentHeader.cshtml
+++ b/SPMS/Views/Shared/_DepartmentHeader.cshtml
@@ -40,7 +40,7 @@
 									</li>
 								</ul>
 							</div>
-							<a class="all-notification" asp-action="Details">See all notifications <i class="ti-arrow-end"></i></a>
+							<a class="all-notification" asp-action="notifications">See all notifications <i class="ti-arrow-end"></i></a>
 						</div>
 
 					</li>
