--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -91,7 +91,7 @@ else if (User.IsInRole("Supervisor"))
                         <li>
                             <a asp-controller="project" asp-action="proposal">
                                 Proposals
-                                <span class="badge light text-white bg-blue rounded-circle">1</span>
+                                @*<span class="badge light text-white bg-blue rounded-circle">1</span>*@
                             </a>
                         </li>
                         <li><a asp-controller="project" asp-action="milestone">Chapters</a></li>
