--- a/SPMS/Areas/Staff/Views/Notification/Notifications.cshtml
+++ b/SPMS/Areas/Staff/Views/Notification/Notifications.cshtml
@@ -1,8 +1,14 @@
 ﻿@using Domain.Entities
 @{
-	ViewData["Title"] = "Notification";
-	var noti = ViewData["Noti"] as IEnumerable<Notification>;
+    ViewData["Title"] = "Notification";
+    var noti = ViewData["Noti"] as IEnumerable<Notification>;
 }
+
+<head>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+</head>
 
 
 <Partial name="_NotificationHeader" />
@@ -10,37 +16,75 @@
 
 
 <div class="content-body">
-	<!-- row -->
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xl-12">
-				<div class="card overflow-hidden">
-					<div class="card-body">
-						<div class="side-border">
-							<h4 class="fs-20 font-w700"><span>Today</span></h4>
-						</div>
+    <!-- row -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="card overflow-hidden">
+                    <div class="card-body">
+                        <div class="side-border">
+                            <h4 class="fs-20 font-w700"><span>Today</span></h4>
+                        </div>
 
-						@foreach (var item in @noti)
-						{
-							<div class="latest d-flex align-items-center justify-content-between flex-wrap">
-								<div class="d-flex align-items-center flex-wrap mb-3">
-									<span class="me-3">2m ago</span>
-									<div class="enaergy">
-										<span class="bg-primary"><i class="fas fa-bolt"></i></span>
-									</div>
-									<div class="ms-0 ms-sm-3">
-										<h4 class="fs-18 font-w500">@item.Content.Substring(0,30)...</h4>
-										<p class="mb-0 fs-16">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</p>
-									</div>
-								</div>
-								<a href="javascript:void(0);" class="btn-outline-primary ">Read</a>
-								<a href="javascript:void(0);" class="btn-outline-primary ">Mark as Read</a>
-							</div>
-						}
+                        @foreach (var item in @noti)
+                        {
+                            <div class="latest d-flex align-items-center justify-content-between flex-wrap">
+                                <div class="d-flex align-items-center flex-wrap mb-3">
+                                    <span class="me-3">2m ago</span>
+                                    <div class="enaergy">
+                                        <span class="bg-primary"><i class="fas fa-bolt"></i></span>
+                                    </div>
+                                    <div class="ms-0 ms-sm-3">
+                                        <h4 class="fs-18 font-w500">@item.Content.Substring(0,30)...</h4>
+                                        <p class="mb-0 fs-16">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <a value="@item.NotificationId" data-bs-toggle="modal" data-bs-target="#basicModal_@item.NotificationId" id="notificationId" class="btn btn-outline-primary">Read</a>
+                                    <a value="@item.NotificationId" id="notificationId" class="btn btn-outline-primary ">Mark as Read</a>
+                                </div>
+                                <div class="modal fade" id="basicModal_@item.NotificationId">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Notification</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <input name="ProjectId" value="@item.NotificationId" type="hidden" class="form-control">
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <div class="mb-3">
+                                                            <p>@item.Content</p>
+                                                        </div>
+                                                    </div>
 
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" id="notyId_@item.NotificationId" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript">
+    $(function () {
+        $('#notificationId').click(function () {
+            var url = '@Url.Content("~/")' + "CascadeHelp/readNotification";
+            var a = document.getElementsByTagName("a");
+            var ddlSource = a[0].getAttribute("value");
+            $.getJSON(url, { Id: $(ddlSource) }, function (dat) {
+            });
+        });
+    });
+</script>
