--- a/SPMS/Views/Shared/_Footer.cshtml
+++ b/SPMS/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="footer">
     <div class="copyright">
-        <p>Copyright © Developed by <a href="#" target="_blank">Jay</a>* @DateTime.Now.Year</p>
+        <p>Copyright © Developed by <a href="#" target="_blank">JayAfolayan</a>* @DateTime.Now.Year</p>
     </div>
 </div>
